# message-gateway

./: .editorconfig  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODING_STANDARDS.md  CONTRIBUTING.md  LICENSE  Makefile  PRD.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_clientes.py  0003_mensajes.py  0003_planes_facturas_pagos.py  0004_plantillas_whatsapp.py  0004_webhooks.py  0005_admin_role_and_markup.py  0005_lotes_mensajes.py  0006_batch_cost_rollup.py  0006_mensajes_latency.py  0006_provider_health.py  0007_batch_completion_webhook.py
backend/app/: __init__.py  config.py  db.py  health.py  main.py  redis_client.py
backend/app/adapters/: __init__.py  base.py  errors.py  failover.py  flow.py  meta_whatsapp.py  registry.py  sms_aggregator.py
backend/app/api/: __init__.py
backend/app/models/: __init__.py  base.py  batch.py  client.py  invoice.py  message.py  payment.py  plan.py  provider_config.py  routing_log.py  webhook.py  whatsapp_template.py
backend/app/observability/: __init__.py  logging.py  redact.py
backend/app/routes/: __init__.py  admin.py  auth.py  billing.py  messages.py  templates.py  webhooks.py
backend/app/services/: __init__.py  admin.py  auth.py  billing.py  dte.py  messaging.py  provider_health.py  rate_limit.py  templates.py  webhook_delivery.py  webhooks.py
backend/tests/: __init__.py  conftest.py  test_adapters.py  test_alembic.py  test_config.py  test_db.py  test_health.py  test_health_checks.py  test_infra.py  test_redis_client.py  test_structure.py
backend/tests/adapters/: test_failover.py  test_failover_registry.py  test_flow.py
backend/tests/models/: __init__.py  test_batch.py  test_billing.py  test_client.py  test_message.py  test_provider_config.py  test_routing_log.py  test_webhook.py  test_whatsapp_template.py
backend/tests/observability/: test_logging.py  test_redact.py
backend/tests/routes/: __init__.py  test_admin.py  test_auth.py  test_batch_messaging.py  test_billing.py  test_messages.py  test_templates.py  test_webhooks.py
backend/tests/services/: __init__.py  test_admin.py  test_auth.py  test_batch_messaging.py  test_billing.py  test_dte.py  test_messaging.py  test_messaging_failover.py  test_messaging_routing_log.py  test_provider_health.py  (+4 more)
(+50 files in other folders)
